# Machine-Learning

./: .gitignore  11_training_deep_neural_networks.ipynb  Machine Learning.ods  Perceptrons.ipynb  README.md  argmax.ipynb  bootsrapping.ipynb  decisionTree.ipynb  demo.ipynb  demo1.ipynb  gd.ipynb  gradient-descent.ipynb  knnIris.ipynb  lineChart.ipynb  linear-gradient.ipynb  logisticRegression.ipynb  mnist.ipynb  mnist.py  mnist_sklearn.ipynb  naiveBayes.ipynb  nminstFashion.ipynb  normal_equation.ipynb  pima-india.ipynb  pyproject.toml  randomForest.ipynb  svm.ipynb  tensor.ipynb  tensorflow2.ipynb
